Improve SEO for related book button.

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -166,7 +166,7 @@ layout: default
             </div>
             
             <div class="book-actions">
-              <a href="{{ book.url }}" class="btn btn-primary btn-sm">Learn More</a>
+              <a href="{{ book.url }}" class="btn btn-primary btn-sm">View Book</a>
             </div>
           </div>
         </article>
