--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,6 +9,7 @@
     <a class="page-link" href="{{ "/" | relative_url }}">Home</a>
     <a class="page-link" href="{{ "/about" | relative_url }}">About</a>
     <a class="page-link" href="{{ "/books" | relative_url }}">Books</a>
+    <a class="page-link" href="{{ "/write" | relative_url }}">Write</a>
     <a class="page-link" href="{{ "/contact" | relative_url }}">Contact</a>
   </div>
 </nav>
