--- a/_includes/social.html
+++ b/_includes/social.html
@@ -3,20 +3,7 @@
   <h1 class="social-links-title">Follow Us</h1>
   <ul class="social-media-list">
     {%- for link in site.social.links -%}
-      {%- if link contains "twitter.com" -%}
-        <li>
-          <a href="{{ link }}"
-             class="social-link twitter"
-             target="_blank"
-             rel="noopener noreferrer"
-             aria-label="Follow us on Twitter">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-            </svg>
-            <span>Twitter</span>
-          </a>
-        </li>
-      {%- elsif link contains "linkedin.com" -%}
+      {%- if link contains "linkedin.com" -%}
         <li>
           <a href="{{ link }}"
              class="social-link linkedin"
@@ -66,6 +53,32 @@
               <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
             </svg>
             <span>YouTube</span>
+          </a>
+        </li>
+      {%- elsif link contains "instagram.com" -%}
+        <li>
+          <a href="{{ link }}"
+             class="social-link instagram"
+             target="_blank"
+             rel="noopener noreferrer"
+             aria-label="Follow us on Instagram">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
+            </svg>
+            <span>Instagram</span>
+          </a>
+        </li>
+      {%- elsif link contains "bsky.app" -%}
+        <li>
+          <a href="{{ link }}"
+             class="social-link bluesky"
+             target="_blank"
+             rel="noopener noreferrer"
+             aria-label="Follow us on Bluesky">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 10.8c-1.087-2.114-4.046-6.053-6.798-7.995C2.566.944 1.561 1.266.902 1.565.139 1.908 0 3.08 0 3.768c0 .69.378 5.65.624 6.479.785 2.627 3.6 3.497 6.167 3.252-4.475.663-8.405 2.277-4.96 8.005 3.839 5.837 6.545-1.467 6.882-2.667.18-.637.27-1.313.287-1.834.017.521.106 1.197.287 1.834.337 1.2 3.043 8.504 6.882 2.667 3.445-5.728-.485-7.342-4.96-8.005 2.568.245 5.382-.625 6.167-3.252.246-.828.624-5.79.624-6.479 0-.688-.139-1.86-.902-2.203-.66-.3-1.664-.621-4.3 1.24C10.046 4.747 7.087 8.686 6 10.8h6z"/>
+            </svg>
+            <span>Bluesky</span>
           </a>
         </li>
       {%- endif -%}
