--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,10 @@
       </div>
     </div>
 
+    <div class="footer-bottom">
+      <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</p>
+    </div>
+
   </div>
 
 </footer>
